# articuelate

./: .editorconfig  .gitignore  AGENTS.md  Cargo.toml  README.md  Taskfile.yaml  build.rs  tauri.conf.json
.zed/: debug.json
crates/app-backend/: Cargo.toml
crates/app-backend/src/: cue.rs  engine.rs  lib.rs
crates/app-desktop/: Cargo.toml  index.html  package-lock.json  package.json  tauri.conf.json  tsconfig.json  vite.config.ts
crates/app-desktop/capabilities/: default.json
crates/app-desktop/src/: commands.rs  lib.rs  main.rs  state.rs
crates/app-desktop/src-ui/: App.tsx  index.css  ipc.ts  theme.ts  types.ts
crates/app-desktop/src-ui/components/: DetailPanel.tsx  StatusBar.tsx  Toolbar.tsx
crates/app-desktop/src-ui/layout/: Workspace.tsx
docs/: architecture_map.tldr  async-cue-actor.md  communication.md  pdd.md  system-architecture.md  ui-design-language.md  ui.md
scripts/: gen_icons.mjs  tauri.mjs
src/: app.rs  audio.rs  commands.rs  cue.rs  cuelist.rs  detail.rs  engine.rs  exec.rs  lib.rs  main.rs  media.rs  model.rs  panel.rs  state.rs  tabbed.rs  theme.rs  toolbar.rs
src/panels/: cuelist.rs  detail.rs  media.rs  mod.rs  status_bar.rs  style.rs  toolbar.rs
src/style/: mod.rs  style.rs  theme.rs  tokens.rs
src/ui/: cuelist.rs  detail.rs  media.rs  mod.rs  panel.rs  status_bar.rs  tabbed.rs  toolbar.rs
themes/: 01-base.toml  dark.toml
ui/: index.html  main.slint  package-lock.json  package.json  vite.config.ts
ui/src/: index.css  main.tsx  store.ts
ui/src/components/: CueList.tsx  MediaPanel.tsx
