[package]
name = "articuelate"
version = "0.1.0"
edition = "2024"
description = "A modern, cross-platform, open-source audio cue system for professional live show control"
authors = ["H3mul"]

[dependencies]
slint = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
kira = "0.12"

[build-dependencies]
slint-build = "1"
