[package]
name = "articuelate"
version = "0.1.0"
edition = "2024"
description = "A modern, cross-platform, open-source audio cue system for professional live show control"
authors = ["H3mul"]

[lib]
name = "articuelate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
kira = "0.12"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
