[package]
name = "articuelate"
version = "0.1.0"
edition = "2024"
default-run = "articuelate"
description = "Articuelate - a native, Floem-based audio cue system inspired by Lapce"

[dependencies]
floem = { version = "0.2", features = ["tokio"] }
fastrand = "2"
im = "15"
lucide-floem = "0.2"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
cpal = "0.15"
ringbuf = "0.4"
rodio = "0.19"
toml = "0.8"
uuid = { version = "1.24.0", features = ["v7", "serde"] }
serde = { version = "1.0.229", features = ["derive", "rc"] }
yaml_serde = "0.10.4"
arc-swap = "1.9.2"
crossbeam-channel = "0.5.16"
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }
serde_with = "3.21.0"
