[package]
name = "app-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "app_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "app-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
# Pull in the isolated pure-Rust backend:
app-backend = { path = "../app-backend" }
